fix a11y contrast

--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -135,7 +135,7 @@ body a:hover {
 }
 #theme:checked ~ #content,
 #theme:checked ~ #content main {
-    background: #fcfcfc;
+    background: hsl(0deg 0% 99%);
     color: #161819;
 }
 /* syntax highlighting */
@@ -148,10 +148,10 @@ body a:hover {
 .language-md .url .content { color: hsl(359deg 83% 71%); }
 .language-md .url .url     { color: hsl(215deg 36% 61%); }
 /* light */
-#theme:checked ~ #content .language-md .title        {color: hsl(114deg 31% 49%);}
-#theme:checked ~ #content .language-md .punctuation  {color: hsl(180deg 52% 43%);}
+#theme:checked ~ #content .language-md .title        {color: hsl(114deg 60% 30%);}
+#theme:checked ~ #content .language-md .punctuation  {color: hsl(180deg 52% 32%);}
 #theme:checked ~ #content .language-md .url          {color: hsl(180deg 36% 34%);}
-#theme:checked ~ #content .language-md .url .content {color: hsl(359deg 83% 53%);}
+#theme:checked ~ #content .language-md .url .content {color: hsl(359deg 80% 36%);}
 #theme:checked ~ #content .language-md .url .url     {color: hsl(215deg 36% 45%);}
 
 h1,h2,h3 { color: hsl(114deg 31% 68%); }
@@ -160,6 +160,13 @@ h1,h2,h3 { color: hsl(114deg 31% 68%); }
 #theme:checked ~ #content h3 {
     color: hsl(114deg 31% 49%);
 }
+
+.line-num {color: #9d9d9d;}
+#theme:checked ~ #content .line-num {color: #727272;}
+
+.line-code:focus { background: #8080804f; }
+#theme:checked ~ #content .line-code:focus { background: #b0b0b026; }
+
 
 /* transitions */
 @media (prefers-reduced-motion: no-preference) {
@@ -170,7 +177,9 @@ h1,h2,h3 { color: hsl(114deg 31% 68%); }
     .language-md .url,
     .language-md .url .content,
     .language-md .url .url,
-    h1,h2,h3 {
+    h1,h2,h3,
+    .line-num,
+    .line-code:focus {
         transition: color .3s ease, background .3s ease;
     }
 }
@@ -211,7 +220,6 @@ pre, pre * {
 .line-num {
     text-align: right;
     user-select: none;
-    color: grey;
 }
 .line-code {
     line-height: 1.4;
@@ -220,6 +228,4 @@ pre, pre * {
 /* editable */
 .line-code:focus {
     outline: none;
-    background: #8080804f;
 }
-#theme:checked ~ #content .line-code:focus { background: #b0b0b026; }
